# django-er-diagram

./: .coverage  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test.yml
django_er_diagram/: __init__.py  constants.py  diagram_template.html  settings.py
django_er_diagram/management/commands/: generate_diagrams.py
django_er_diagram/templates/: er_diagram_template.md  erd_template.html  index_template.html
tests/: conftest.py  test_django_er_diagram.py
tests/fixtures/: mock_html_output.html
tests/mock_app/: models.py
